adding search bar

--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
 
           <button type="button" id="subNewForm" class="btn btn-primary">Submit Review</button>
         </form>
+        <input id="searchBox" placeholder="Search reviews..." />
+        <button onclick="runSearch()">Search</button>
+        <div id="results"></div>
       </div>
     </div>
 
