adding single review

--- a/reviews.html
+++ b/reviews.html
@@ -16,14 +16,15 @@
 
     <h2>Review Details</h2>
 
-    <div id="singleReview" style="font-size: 14px; margin-top: 20px;">
-      <p><strong>Home Team:</strong> <span id="singleHomeTeam"></span></p>
-      <p><strong>Away Team:</strong> <span id="singleAwayTeam"></span></p>
-      <p><strong>Comment:</strong> <span id="singleComment"></span></p>
-      <p><strong>Stars:</strong> <span id="singleStars"></span></p>
-      <p><strong>Reviewer:</strong> <span id="singleUserName"></span></p>
-      <p><strong>File Name:</strong> <span id="singleFileName"></span></p>
-    </div>
+    <div id="reviewContainer">
+    <p>Home Team: <span id="homeTeam"></span></p>
+    <p>Away Team: <span id="awayTeam"></span></p>
+    <p>Comment: <span id="comment"></span></p>
+    <p>Stars: <span id="stars"></span></p>
+    <p>Reviewer: <span id="reviewer"></span></p>
+    <p>File Name: <span id="fileName"></span></p>
+  </div>
+
 
     <br>
     <a href="Multimedia App.html" class="btn btn-secondary">Back to Home</a>
