--- a/reviews.html
+++ b/reviews.html
@@ -27,7 +27,7 @@
 
 
     <br>
-    <a href="Multimedia App.html" class="btn btn-secondary">Back to Home</a>
+    <a href="index.html" class="btn btn-secondary">Back to Home</a>
 
   </div>
 
