updating to current pl

--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
   <script>
     const premierLeagueTeams = [
       "Arsenal","Aston Villa","Bournemouth","Brentford","Brighton","Chelsea",
-      "Crystal Palace","Everton","Fulham","Ipswich Town","Leicester City",
+      "Crystal Palace","Everton","Fulham","Burnley","Leeds",
       "Liverpool","Manchester City","Manchester United","Newcastle United",
-      "Nottingham Forest","Southampton","Tottenham Hotspur","West Ham United",
+      "Nottingham Forest","Sunderland","Tottenham Hotspur","West Ham United",
       "Wolverhampton Wanderers"
     ];
 
