--- a/reviews.html
+++ b/reviews.html
@@ -91,6 +91,11 @@
       <div class="details-title">Match Information</div>
 
       <div class="detail-row">
+        <span class="detail-label">Review Title:</span>
+        <span id="fileName"></span>
+      </div>
+
+      <div class="detail-row">
         <span class="detail-label">Home Team:</span>
         <span id="homeTeam"></span>
       </div>
@@ -114,12 +119,6 @@
         <span class="detail-label">Reviewer:</span>
         <span id="reviewer"></span>
       </div>
-
-      <div class="detail-row" style="display:none;">
-        <span class="detail-label">File Name:</span>
-        <span id="fileName"></span>
-      </div>
-
 
       <!-- Media gets injected here -->
       <div id="reviewContainer" class="media-wrapper"></div>
